# ionrs

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  HIDE_NAMES_PLAN.md  LANGUAGE.md  LICENSE  PYTHON_STYLE_ARGS_DESIGN.md  README.md  VM_AUDIT.md  claude.sh  codex.draft2.md  error-handling.md  llms.txt  publish.sh
.github/workflows/: ci.yml  release.yml  site.yml
docs/: concurrency.md  coop-scheduler-plan.md  design.md  embedding.md  error-handling.md  hide-names.md  performance.md  stdlib.md  testing.md  tooling.md  vm-internals.md
editors/jetbrains/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/jetbrains/src/main/kotlin/com/ionlang/idea/: IonFileType.kt  IonLanguage.kt  IonStartupActivity.kt  IonTextMateBundleProvider.kt
editors/jetbrains/src/main/kotlin/com/ionlang/idea/highlighting/: IonLexer.kt  IonSyntaxHighlighter.kt  IonSyntaxHighlighterFactory.kt  IonTokenTypes.kt
editors/jetbrains/src/main/kotlin/com/ionlang/idea/lsp/: IonLanguageServer.kt  IonLanguageServerFactory.kt
editors/jetbrains/src/main/kotlin/com/ionlang/idea/settings/: IonConfigurable.kt  IonSettings.kt
editors/jetbrains/src/main/kotlin/com/ionrs/idea/: IonFileType.kt  IonLanguage.kt  IonStartupActivity.kt  IonTextMateBundleProvider.kt
editors/jetbrains/src/main/kotlin/com/ionrs/idea/highlighting/: IonLexer.kt  IonSyntaxHighlighter.kt  IonSyntaxHighlighterFactory.kt  IonTokenTypes.kt
editors/jetbrains/src/main/kotlin/com/ionrs/idea/lsp/: IonLanguageServer.kt  IonLanguageServerFactory.kt
editors/jetbrains/src/main/kotlin/com/ionrs/idea/settings/: IonConfigurable.kt  IonSettings.kt
editors/jetbrains/src/main/resources/ion-bundle/: info.plist
editors/jetbrains/src/main/resources/ion-bundle/Preferences/: ion.tmPreferences
editors/jetbrains/src/main/resources/ion-bundle/Syntaxes/: ion.tmLanguage.json
editors/vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: ion.tmLanguage.json
editors/zed/: Cargo.toml  extension.toml  install.sh  release.sh
editors/zed/languages/ion/: brackets.scm  config.toml  highlights.scm  indents.scm  outline.scm
editors/zed/src/: lib.rs
examples/: collections.ion  concurrency.ion  config.ion  data_transform.ion  error_handling.ion  fizzbuzz.ion  functional.ion  game_logic.ion  pattern_matching.ion  strings.ion  types.ion
ion-cli/: Cargo.toml
ion-cli/src/: main.rs
ion-core/: Cargo.toml
ion-core/benches/: ion_bench.rs
ion-core/examples/: embed.rs  tokio_host.rs
ion-core/fuzz/: Cargo.toml
ion-core/fuzz/corpus/fuzz_parser/: 32cc5d67  4039977c  8cf10d65  8e109ece  ef17b3d0  f1a4378f
ion-core/fuzz/fuzz_targets/: fuzz_eval.rs  fuzz_lexer.rs  fuzz_parser.rs
ion-core/src/: ast.rs  async_rt.rs  async_rt_std.rs  async_rt_tokio.rs  async_runtime.rs  bytecode.rs  call.rs  compiler.rs  engine.rs  env.rs  error.rs  hash.rs  host_types.rs  intern.rs  interpreter.rs  lexer.rs  lib.rs  log.rs  module.rs  names.rs  parser.rs  rewrite.rs  stdlib-docs.json  stdlib.rs  token.rs  value.rs  vm.rs
ion-core/tests/: async_runtime.rs  concurrency.rs  cross_validate.rs  edge_cases.rs  error_redaction.rs  integration.rs  integration_async.rs  legacy_threaded_concurrency.rs  log_module.rs  vm.rs
ion-derive/: Cargo.toml
ion-derive/src/: lib.rs
ion-lsp/: Cargo.toml
ion-lsp/src/: main.rs
site/: CONTRIBUTING.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
site/.github/workflows/: site.yml
site/scripts/: check-ion-snippets.mjs  sync-manifests.mjs
site/src/: env.d.ts
site/src/components/: Footer.astro  ManifestBrowser.astro  MemberList.astro
site/src/content/docs/: 404.md  index.mdx
site/src/lib/: ion-doc.ts  manifest.ts  render-manifest.ts
site/src/pages/: preview.astro
site/src/pages/reference/: [...slug].astro  index.astro
site/src/styles/: site.css
tests/scripts/: smoke.ion
tree-sitter-ion/: Makefile  binding.gyp  grammar.js  package-lock.json  package.json  setup.py  tree-sitter-ion.wasm  tree-sitter.json
tree-sitter-ion/bindings/c/: tree-sitter-ion.h  tree-sitter-ion.pc.in
tree-sitter-ion/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-ion/bindings/node/: binding.cc
tree-sitter-ion/bindings/rust/: build.rs  lib.rs
tree-sitter-ion/queries/: highlights.scm
tree-sitter-ion/src/: grammar.json  node-types.json  parser.c
