[package]
name = "ionlang-cli"
version = "0.5.0"
edition = "2021"
description = "CLI runner and REPL for the Ion scripting language"
license = "MIT"
repository = "https://github.com/chutuananh2k/ion-lang"
readme = "../README.md"
keywords = ["scripting", "repl", "ion"]
categories = ["command-line-utilities"]

[[bin]]
name = "ion"
path = "src/main.rs"

[features]
default = ["vm"]
vm = ["ion-core/vm"]

[dependencies]
ion-core = { version = "0.5.0", path = "../ion-core", default-features = true }
