[package]
name = "ion-core"
version = "0.2.0"
edition = "2021"
description = "Embeddable scripting language with a bytecode VM"
license = "MIT"
repository = "https://github.com/paiml/ionlang"
readme = "../README.md"
keywords = ["scripting", "embedded", "interpreter", "vm", "language"]
categories = ["compilers", "game-development"]

[features]
default = ["derive", "vm", "optimize"]
obfuscate = ["obfstr"]
derive = ["ion-derive"]
concurrency = ["crossbeam-channel"]
vm = []
optimize = ["vm"]
msgpack = ["rmpv"]
rewrite = []

[dependencies]
obfstr = { version = "0.4", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
ion-derive = { version = "0.2.0", path = "../ion-derive", optional = true }
rmpv = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }

[[example]]
name = "tokio_host"
required-features = ["concurrency"]

[[bench]]
name = "ion_bench"
harness = false
