[package]
name = "ion-core"
version = "0.9.3"
edition = "2021"
description = "Embeddable scripting language with a bytecode VM"
license = "MIT"
repository = "https://github.com/ionrs/ionrs"
readme = "../README.md"
keywords = ["scripting", "embedded", "interpreter", "vm", "language"]
categories = ["compilers", "game-development"]

[features]
default = ["derive", "vm", "semver", "os", "fs"]
obfuscate = ["obfstr"]
derive = ["ion-derive"]
legacy-threaded-concurrency = ["crossbeam-channel"]
async-runtime = ["vm", "dep:tokio", "tokio/sync", "tokio/time", "tokio/rt", "tokio/fs", "tokio/io-util"]
vm = []
msgpack = ["rmpv"]
rewrite = []
embedded-stdlib-docs = []

# Compile-time cap for `log::*` callsites in scripts. The `vm` compiler strips
# `log::trace`/`log::debug`/etc. calls (args and all) when the level is above
# the selected cap. Mirrors `tracing`'s `release_max_level_*` features.
#
# At most one `log_max_level_*` feature should be enabled. If none are set,
# the cap defaults to `trace` under `debug_assertions` and `info` otherwise.
log_max_level_off   = []
log_max_level_error = []
log_max_level_warn  = []
log_max_level_info  = []
log_max_level_debug = []
log_max_level_trace = []

# Enable a default `LogHandler` that bridges `log::*` calls to the `tracing`
# crate (`tracing::trace!` … `tracing::error!`). Pure additive — the existing
# `StdLogHandler` (stderr) is still available without this feature.
tracing = ["dep:tracing"]

# `semver::` stdlib module backed by the `semver` crate. Enabled by default;
# disable with `default-features = false` if embedders don't need it.
semver = ["dep:semver"]

# `os::` stdlib module — OS/arch detection, env vars, process info. Pure
# `std`; no new dependencies. Default-on; opt out with `default-features = false`
# for sandboxed embedders that don't want scripts reading the environment.
os = []

# `fs::` stdlib module — filesystem I/O. The same script-level surface
# (`fs::read`, `fs::write`, …) is registered against `std::fs` by default
# and against `tokio::fs` when `async-runtime` is enabled, preserving Ion's
# non-coloured calling convention. Default-on; opt out with
# `default-features = false` for sandboxed embedders. The companion `path::`
# module is always-on and pure-string (no I/O).
fs = []

[dependencies]
obfstr = { version = "0.4", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
ion-derive = { version = "0.9.3", path = "../ion-derive", optional = true }
rmpv = { version = "1", optional = true }
tokio = { version = "1", features = ["time"], optional = true }
tracing = { version = "0.1", optional = true, default-features = false, features = ["std", "attributes"] }
semver = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }

[[example]]
name = "tokio_host"
required-features = ["async-runtime"]

[[bench]]
name = "ion_bench"
harness = false
