[package]
name = "ion-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macro for Ion scripting language host types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/ionlang"
keywords = ["scripting", "derive", "ion"]
categories = ["compilers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
