[package]
name = "ion-derive"
version = "0.7.0"
edition = "2021"
description = "Derive macro for Ion scripting language host types"
license = "MIT"
repository = "https://github.com/chutuananh2k/ion-lang"
readme = "../README.md"
keywords = ["scripting", "derive", "ion"]
categories = ["compilers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
