[package]
name = "ion-lsp"
version = "0.1.0"
edition = "2021"
description = "Language server for the Ion scripting language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/ionlang"
keywords = ["lsp", "scripting", "ion"]
categories = ["development-tools"]

[[bin]]
name = "ion-lsp"
path = "src/main.rs"

[dependencies]
ion-core = { path = "../ion-core", default-features = false, features = [] }
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
