[package]
name = "ion-lsp"
version = "0.9.3"
edition = "2021"
description = "Language server for the Ion scripting language"
license = "MIT"
repository = "https://github.com/ionrs/ionrs"
readme = "../README.md"
keywords = ["lsp", "scripting", "ion"]
categories = ["development-tools"]

[[bin]]
name = "ion-lsp"
path = "src/main.rs"

[dependencies]
ion-core = { version = "0.9.3", path = "../ion-core", default-features = false, features = ["embedded-stdlib-docs"] }
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
