[package]
name = "ion-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ion-core = { path = "..", default-features = false, features = [] }

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
doc = false

[[bin]]
name = "fuzz_eval"
path = "fuzz_targets/fuzz_eval.rs"
doc = false
